Logistic Regression Trial

--- a/notebooks/logistic_regression.ipynb
+++ b/notebooks/logistic_regression.ipynb
@@ -9,8 +9,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras import datasets, layers, models\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "import matplotlib.pyplot as plt\n"
    ]
   },
@@ -821,12 +821,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = data['genre']\n",
-    "X = data.drop('genre', axis=1)"
+    "y = np.array(data['genre'])\n",
+    "X = np.array(data.drop('genre', axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6295477903391573"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = LogisticRegression(max_iter=1000)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
+    "                                                    test_size=0.30, \n",
+    "                                                    random_state=42)\n",
+    "\n",
+    "\n",
+    "cv_results = cross_validate(model, X_train, y_train, cv=5)\n",
+    "\n",
+    "accuracy = cv_results['test_score'].mean()\n",
+    "accuracy\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train)\n",
+    "X_to_predict = [X_test[0]]\n",
+    "prediction = model.predict(X_to_predict)[0]\n",
+    "prediction"
    ]
   },
   {
@@ -834,13 +888,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X,\n",
-    "                                                    y, \n",
-    "                                                    test_size=0.33,\n",
-    "                                                    random_state=42)\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
