--- a/notebooks/Random Forest Classifier.ipynb
+++ b/notebooks/Random Forest Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "id": "83bba000",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.pipeline import Pipeline"
+    "from sklearn.metrics import r2_score"
    ]
   },
   {
@@ -591,6 +591,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "effb9ea1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1175337186897879"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(y_true, preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "id": "2cf60406",
    "metadata": {},
@@ -605,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "71db0a4c",
+   "id": "14405f52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f460e685",
+   "id": "e16e8203",
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e4340395",
+   "id": "60179bfa",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "50a1dbcf",
+   "id": "2815fcf3",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1646783c",
+   "id": "95bb09b9",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c959d6a9",
+   "id": "8da7497f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6e368645",
+   "id": "453d470d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "23f354ff",
+   "id": "f83bd89f",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ac3b7dc0",
+   "id": "7d4e926c",
    "metadata": {},
    "outputs": [
     {
@@ -800,8 +821,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "id": "d5441104",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04287090558766837"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(y_true, preds_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "46668abf",
+   "id": "81336cfa",
    "metadata": {},
    "outputs": [],
    "source": []
