First log of the logistic regression accuracy onto mlflow. Still need to preprocess data, implement  Virtual Machin..

--- a/notebooks/small_30s_dataset_split.ipynb
+++ b/notebooks/small_30s_dataset_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "[1000 rows x 60 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
        "[1000 rows x 59 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,12 +831,411 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data.to_csv('../data/raw/train_small_30s.csv')\n",
-    "test_data.to_csv('../data/raw/val_small_30s.csv')"
+    "train_data.to_csv('../data/raw/train_small_30s.csv', index=False)\n",
+    "test_data.to_csv('../data/raw/val_small_30s.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>length</th>\n",
+       "      <th>chroma_stft_mean</th>\n",
+       "      <th>chroma_stft_var</th>\n",
+       "      <th>rms_mean</th>\n",
+       "      <th>rms_var</th>\n",
+       "      <th>spectral_centroid_mean</th>\n",
+       "      <th>spectral_centroid_var</th>\n",
+       "      <th>spectral_bandwidth_mean</th>\n",
+       "      <th>spectral_bandwidth_var</th>\n",
+       "      <th>rolloff_mean</th>\n",
+       "      <th>...</th>\n",
+       "      <th>mfcc16_var</th>\n",
+       "      <th>mfcc17_mean</th>\n",
+       "      <th>mfcc17_var</th>\n",
+       "      <th>mfcc18_mean</th>\n",
+       "      <th>mfcc18_var</th>\n",
+       "      <th>mfcc19_mean</th>\n",
+       "      <th>mfcc19_var</th>\n",
+       "      <th>mfcc20_mean</th>\n",
+       "      <th>mfcc20_var</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>661794</td>\n",
+       "      <td>0.359063</td>\n",
+       "      <td>0.091203</td>\n",
+       "      <td>0.078255</td>\n",
+       "      <td>0.001589</td>\n",
+       "      <td>2614.438373</td>\n",
+       "      <td>791564.514768</td>\n",
+       "      <td>2655.955821</td>\n",
+       "      <td>277059.974461</td>\n",
+       "      <td>5435.743207</td>\n",
+       "      <td>...</td>\n",
+       "      <td>69.891602</td>\n",
+       "      <td>-6.128784</td>\n",
+       "      <td>54.612301</td>\n",
+       "      <td>-1.676880</td>\n",
+       "      <td>63.525505</td>\n",
+       "      <td>0.445159</td>\n",
+       "      <td>74.582283</td>\n",
+       "      <td>-1.551980</td>\n",
+       "      <td>112.762787</td>\n",
+       "      <td>country</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>661794</td>\n",
+       "      <td>0.311048</td>\n",
+       "      <td>0.093655</td>\n",
+       "      <td>0.043598</td>\n",
+       "      <td>0.000168</td>\n",
+       "      <td>1752.759111</td>\n",
+       "      <td>91533.191523</td>\n",
+       "      <td>1990.492028</td>\n",
+       "      <td>51458.046814</td>\n",
+       "      <td>3734.070589</td>\n",
+       "      <td>...</td>\n",
+       "      <td>114.267838</td>\n",
+       "      <td>-4.261119</td>\n",
+       "      <td>82.662392</td>\n",
+       "      <td>2.312390</td>\n",
+       "      <td>87.984680</td>\n",
+       "      <td>-9.928867</td>\n",
+       "      <td>110.194450</td>\n",
+       "      <td>-4.327577</td>\n",
+       "      <td>81.843788</td>\n",
+       "      <td>jazz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>661504</td>\n",
+       "      <td>0.410039</td>\n",
+       "      <td>0.088842</td>\n",
+       "      <td>0.139203</td>\n",
+       "      <td>0.002202</td>\n",
+       "      <td>2026.298986</td>\n",
+       "      <td>575184.204476</td>\n",
+       "      <td>2398.102837</td>\n",
+       "      <td>155401.937825</td>\n",
+       "      <td>4462.743857</td>\n",
+       "      <td>...</td>\n",
+       "      <td>46.436260</td>\n",
+       "      <td>-2.340442</td>\n",
+       "      <td>40.343788</td>\n",
+       "      <td>0.378325</td>\n",
+       "      <td>50.873978</td>\n",
+       "      <td>0.912167</td>\n",
+       "      <td>45.105530</td>\n",
+       "      <td>-0.442557</td>\n",
+       "      <td>79.085022</td>\n",
+       "      <td>reggae</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>661794</td>\n",
+       "      <td>0.362485</td>\n",
+       "      <td>0.091506</td>\n",
+       "      <td>0.083860</td>\n",
+       "      <td>0.001211</td>\n",
+       "      <td>1398.699344</td>\n",
+       "      <td>240318.731073</td>\n",
+       "      <td>1818.450280</td>\n",
+       "      <td>109090.207161</td>\n",
+       "      <td>3015.631004</td>\n",
+       "      <td>...</td>\n",
+       "      <td>46.324894</td>\n",
+       "      <td>-4.416050</td>\n",
+       "      <td>43.583942</td>\n",
+       "      <td>1.556207</td>\n",
+       "      <td>34.331261</td>\n",
+       "      <td>-5.041897</td>\n",
+       "      <td>47.227180</td>\n",
+       "      <td>-3.590644</td>\n",
+       "      <td>41.299088</td>\n",
+       "      <td>rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>661794</td>\n",
+       "      <td>0.435331</td>\n",
+       "      <td>0.086721</td>\n",
+       "      <td>0.178256</td>\n",
+       "      <td>0.001963</td>\n",
+       "      <td>3167.567655</td>\n",
+       "      <td>700614.732964</td>\n",
+       "      <td>2934.896270</td>\n",
+       "      <td>99923.331311</td>\n",
+       "      <td>6730.141851</td>\n",
+       "      <td>...</td>\n",
+       "      <td>44.671803</td>\n",
+       "      <td>1.004056</td>\n",
+       "      <td>40.042862</td>\n",
+       "      <td>4.012954</td>\n",
+       "      <td>60.054070</td>\n",
+       "      <td>4.695799</td>\n",
+       "      <td>56.645386</td>\n",
+       "      <td>5.842496</td>\n",
+       "      <td>49.892418</td>\n",
+       "      <td>disco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695</th>\n",
+       "      <td>661504</td>\n",
+       "      <td>0.460379</td>\n",
+       "      <td>0.070011</td>\n",
+       "      <td>0.106389</td>\n",
+       "      <td>0.001240</td>\n",
+       "      <td>2650.631198</td>\n",
+       "      <td>206841.317673</td>\n",
+       "      <td>2308.758149</td>\n",
+       "      <td>53480.889885</td>\n",
+       "      <td>5370.785544</td>\n",
+       "      <td>...</td>\n",
+       "      <td>32.963917</td>\n",
+       "      <td>-8.347429</td>\n",
+       "      <td>27.649446</td>\n",
+       "      <td>3.058320</td>\n",
+       "      <td>30.756836</td>\n",
+       "      <td>-7.581401</td>\n",
+       "      <td>28.162165</td>\n",
+       "      <td>2.253433</td>\n",
+       "      <td>28.083473</td>\n",
+       "      <td>disco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>696</th>\n",
+       "      <td>661504</td>\n",
+       "      <td>0.510951</td>\n",
+       "      <td>0.066939</td>\n",
+       "      <td>0.230764</td>\n",
+       "      <td>0.000254</td>\n",
+       "      <td>2699.885484</td>\n",
+       "      <td>43747.335286</td>\n",
+       "      <td>2240.112665</td>\n",
+       "      <td>14965.752212</td>\n",
+       "      <td>5157.401993</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27.692310</td>\n",
+       "      <td>-8.027955</td>\n",
+       "      <td>25.130205</td>\n",
+       "      <td>5.170599</td>\n",
+       "      <td>26.947996</td>\n",
+       "      <td>-2.949507</td>\n",
+       "      <td>21.583843</td>\n",
+       "      <td>4.393158</td>\n",
+       "      <td>19.522268</td>\n",
+       "      <td>metal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>697</th>\n",
+       "      <td>666820</td>\n",
+       "      <td>0.370261</td>\n",
+       "      <td>0.084651</td>\n",
+       "      <td>0.231890</td>\n",
+       "      <td>0.001459</td>\n",
+       "      <td>2454.905302</td>\n",
+       "      <td>218500.755429</td>\n",
+       "      <td>2656.832951</td>\n",
+       "      <td>84736.461839</td>\n",
+       "      <td>5469.103076</td>\n",
+       "      <td>...</td>\n",
+       "      <td>37.653946</td>\n",
+       "      <td>-5.362904</td>\n",
+       "      <td>42.557713</td>\n",
+       "      <td>-0.069673</td>\n",
+       "      <td>36.102852</td>\n",
+       "      <td>-1.157246</td>\n",
+       "      <td>44.098770</td>\n",
+       "      <td>-0.042553</td>\n",
+       "      <td>55.500191</td>\n",
+       "      <td>jazz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>698</th>\n",
+       "      <td>661794</td>\n",
+       "      <td>0.454341</td>\n",
+       "      <td>0.078455</td>\n",
+       "      <td>0.161043</td>\n",
+       "      <td>0.002513</td>\n",
+       "      <td>2025.156662</td>\n",
+       "      <td>218789.668497</td>\n",
+       "      <td>2215.378603</td>\n",
+       "      <td>71352.677638</td>\n",
+       "      <td>4571.101001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40.292931</td>\n",
+       "      <td>-8.713643</td>\n",
+       "      <td>50.240788</td>\n",
+       "      <td>3.709854</td>\n",
+       "      <td>40.942513</td>\n",
+       "      <td>-5.102336</td>\n",
+       "      <td>65.038582</td>\n",
+       "      <td>2.622387</td>\n",
+       "      <td>57.617043</td>\n",
+       "      <td>rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>699</th>\n",
+       "      <td>661794</td>\n",
+       "      <td>0.363777</td>\n",
+       "      <td>0.082660</td>\n",
+       "      <td>0.037552</td>\n",
+       "      <td>0.000275</td>\n",
+       "      <td>1650.852354</td>\n",
+       "      <td>119742.761392</td>\n",
+       "      <td>2040.694127</td>\n",
+       "      <td>104910.818415</td>\n",
+       "      <td>3658.429592</td>\n",
+       "      <td>...</td>\n",
+       "      <td>41.294708</td>\n",
+       "      <td>-4.229586</td>\n",
+       "      <td>31.649763</td>\n",
+       "      <td>0.537276</td>\n",
+       "      <td>38.764347</td>\n",
+       "      <td>-1.494040</td>\n",
+       "      <td>37.882999</td>\n",
+       "      <td>-2.541595</td>\n",
+       "      <td>31.596420</td>\n",
+       "      <td>jazz</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>700 rows × 59 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     length  chroma_stft_mean  chroma_stft_var  rms_mean   rms_var  \\\n",
+       "0    661794          0.359063         0.091203  0.078255  0.001589   \n",
+       "1    661794          0.311048         0.093655  0.043598  0.000168   \n",
+       "2    661504          0.410039         0.088842  0.139203  0.002202   \n",
+       "3    661794          0.362485         0.091506  0.083860  0.001211   \n",
+       "4    661794          0.435331         0.086721  0.178256  0.001963   \n",
+       "..      ...               ...              ...       ...       ...   \n",
+       "695  661504          0.460379         0.070011  0.106389  0.001240   \n",
+       "696  661504          0.510951         0.066939  0.230764  0.000254   \n",
+       "697  666820          0.370261         0.084651  0.231890  0.001459   \n",
+       "698  661794          0.454341         0.078455  0.161043  0.002513   \n",
+       "699  661794          0.363777         0.082660  0.037552  0.000275   \n",
+       "\n",
+       "     spectral_centroid_mean  spectral_centroid_var  spectral_bandwidth_mean  \\\n",
+       "0               2614.438373          791564.514768              2655.955821   \n",
+       "1               1752.759111           91533.191523              1990.492028   \n",
+       "2               2026.298986          575184.204476              2398.102837   \n",
+       "3               1398.699344          240318.731073              1818.450280   \n",
+       "4               3167.567655          700614.732964              2934.896270   \n",
+       "..                      ...                    ...                      ...   \n",
+       "695             2650.631198          206841.317673              2308.758149   \n",
+       "696             2699.885484           43747.335286              2240.112665   \n",
+       "697             2454.905302          218500.755429              2656.832951   \n",
+       "698             2025.156662          218789.668497              2215.378603   \n",
+       "699             1650.852354          119742.761392              2040.694127   \n",
+       "\n",
+       "     spectral_bandwidth_var  rolloff_mean  ...  mfcc16_var  mfcc17_mean  \\\n",
+       "0             277059.974461   5435.743207  ...   69.891602    -6.128784   \n",
+       "1              51458.046814   3734.070589  ...  114.267838    -4.261119   \n",
+       "2             155401.937825   4462.743857  ...   46.436260    -2.340442   \n",
+       "3             109090.207161   3015.631004  ...   46.324894    -4.416050   \n",
+       "4              99923.331311   6730.141851  ...   44.671803     1.004056   \n",
+       "..                      ...           ...  ...         ...          ...   \n",
+       "695            53480.889885   5370.785544  ...   32.963917    -8.347429   \n",
+       "696            14965.752212   5157.401993  ...   27.692310    -8.027955   \n",
+       "697            84736.461839   5469.103076  ...   37.653946    -5.362904   \n",
+       "698            71352.677638   4571.101001  ...   40.292931    -8.713643   \n",
+       "699           104910.818415   3658.429592  ...   41.294708    -4.229586   \n",
+       "\n",
+       "     mfcc17_var  mfcc18_mean  mfcc18_var  mfcc19_mean  mfcc19_var  \\\n",
+       "0     54.612301    -1.676880   63.525505     0.445159   74.582283   \n",
+       "1     82.662392     2.312390   87.984680    -9.928867  110.194450   \n",
+       "2     40.343788     0.378325   50.873978     0.912167   45.105530   \n",
+       "3     43.583942     1.556207   34.331261    -5.041897   47.227180   \n",
+       "4     40.042862     4.012954   60.054070     4.695799   56.645386   \n",
+       "..          ...          ...         ...          ...         ...   \n",
+       "695   27.649446     3.058320   30.756836    -7.581401   28.162165   \n",
+       "696   25.130205     5.170599   26.947996    -2.949507   21.583843   \n",
+       "697   42.557713    -0.069673   36.102852    -1.157246   44.098770   \n",
+       "698   50.240788     3.709854   40.942513    -5.102336   65.038582   \n",
+       "699   31.649763     0.537276   38.764347    -1.494040   37.882999   \n",
+       "\n",
+       "     mfcc20_mean  mfcc20_var    label  \n",
+       "0      -1.551980  112.762787  country  \n",
+       "1      -4.327577   81.843788     jazz  \n",
+       "2      -0.442557   79.085022   reggae  \n",
+       "3      -3.590644   41.299088     rock  \n",
+       "4       5.842496   49.892418    disco  \n",
+       "..           ...         ...      ...  \n",
+       "695     2.253433   28.083473    disco  \n",
+       "696     4.393158   19.522268    metal  \n",
+       "697    -0.042553   55.500191     jazz  \n",
+       "698     2.622387   57.617043     rock  \n",
+       "699    -2.541595   31.596420     jazz  \n",
+       "\n",
+       "[700 rows x 59 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "d = pd.read_csv('../data/raw/train_small_30s.csv')\n",
+    "d"
    ]
   },
   {
