Best model so far

--- a/notebooks/Jamendo random forest.ipynb
+++ b/notebooks/Jamendo random forest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "81d5eaa8",
+   "id": "72a585c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eeb62b3d",
+   "id": "1ff97f5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "941146eb",
+   "id": "65db5f4d",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4617fc35",
+   "id": "6343f2b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "baffd35f",
+   "id": "d1ff2968",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5105dc7e",
+   "id": "12971edf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "19a13d46",
+   "id": "6edb086b",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "92c0333b",
+   "id": "3443292c",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "473e735f",
+   "id": "970ff3a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "bb06fa8a",
+   "id": "70e8e61b",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "3f2ec228",
+   "id": "00376c90",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16742ef2",
+   "id": "54bb22a1",
    "metadata": {},
    "source": [
     "# Best \n",
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "2e9be096",
+   "id": "435bddf0",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "ccdb0295",
+   "id": "0888583d",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "4b1bf61e",
+   "id": "7b8f6f64",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "06de527c",
+   "id": "a465b863",
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "bdcdfcac",
+   "id": "d753f6c1",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "1b238761",
+   "id": "c031771f",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "573abd4b",
+   "id": "e246bb0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ee4421cd",
+   "id": "064a0dc1",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "830a695a",
+   "id": "658b003e",
    "metadata": {},
    "source": [
     "Changing the test size seems to have no effect on overfitting. "
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "911018b5",
+   "id": "f9d48403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b8dab942",
+   "id": "ad4edba7",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3d8f47a1",
+   "id": "83493f78",
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af02e9a9",
+   "id": "b6296153",
    "metadata": {},
    "source": [
     "Testing for overfit"
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "55b163cc",
+   "id": "678ea07c",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "528c9552",
+   "id": "be0a8bfd",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d78b6d",
+   "id": "22285ab9",
    "metadata": {},
    "source": [
     "Model 17 is the best model so far. On training data accuracy is .75 on the testing data accuracy is .43"
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1a62e08f",
+   "id": "d3187646",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adfc1905",
+   "id": "d48caed4",
    "metadata": {},
    "source": [
     "CHeck for overfit "
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8c2c5963",
+   "id": "d47d5246",
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "524b3054",
+   "id": "c03ff81c",
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e7f20fa9",
+   "id": "906a43b1",
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2e09fd6a",
+   "id": "92b673bd",
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2423b365",
+   "id": "fa2149af",
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "27cddeeb",
+   "id": "06a11773",
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "29063e77",
+   "id": "37e57174",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c47735aa",
+   "id": "bff91926",
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "cb5cd5fe",
+   "id": "bc88f4bc",
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8915d9d5",
+   "id": "3690d7ff",
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8649e1c5",
+   "id": "fc0a571e",
    "metadata": {},
    "source": [
     "second best\n",
@@ -1337,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "b9a2b3df",
+   "id": "d775eab2",
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "257a88a1",
+   "id": "b8c483f1",
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2083a5ba",
+   "id": "1a04183d",
    "metadata": {},
    "source": [
     "Trying different train test split to improve accuracy"
@@ -1425,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "c7a4be0a",
+   "id": "f253c509",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3be37e06",
+   "id": "b5f9650e",
    "metadata": {},
    "source": [
     "# 3rd best \n",
@@ -1445,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "ec721dca",
+   "id": "cbdc4cb2",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "cdb0df39",
+   "id": "cfa085a5",
    "metadata": {},
    "outputs": [
     {
@@ -1525,7 +1525,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "98d608b1",
+   "id": "9f1c37fa",
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2ec8d726",
+   "id": "89ecee63",
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1606,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "25b29372",
+   "id": "997405c2",
    "metadata": {},
    "outputs": [
     {
@@ -1646,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "4ad398dd",
+   "id": "257a8a3e",
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a454fe9e",
+   "id": "4aaeb791",
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "77d8688a",
+   "id": "480b68f7",
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "34df16dd",
+   "id": "7ed262b3",
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1806,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "77942d0c",
+   "id": "15a008f1",
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "01c80ed7",
+   "id": "3fa1a86a",
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1886,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "cda7fc2c",
+   "id": "2d0fa792",
    "metadata": {},
    "outputs": [
     {
@@ -1926,7 +1926,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c4315639",
+   "id": "0697ebea",
    "metadata": {},
    "outputs": [
     {
@@ -1966,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "c28e9892",
+   "id": "f714eadd",
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "384da888",
+   "id": "f8c0442a",
    "metadata": {},
    "outputs": [
     {
@@ -2138,7 +2138,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a9c0fb8f",
+   "id": "d5d148f0",
    "metadata": {},
    "outputs": [
     {
@@ -2162,7 +2162,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "1b44189c",
+   "id": "363962d5",
    "metadata": {},
    "outputs": [
     {
@@ -2202,7 +2202,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "776115ca",
+   "id": "37a90a28",
    "metadata": {},
    "outputs": [
     {
@@ -2241,7 +2241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "debf6fa1",
+   "id": "7d99eb38",
    "metadata": {},
    "source": [
     "# Best models"
@@ -2249,7 +2249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3270a735",
+   "id": "c78b2e74",
    "metadata": {},
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y,test_size=0.35, random_state=42) \n",
@@ -2258,7 +2258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f576416f",
+   "id": "fd1a4100",
    "metadata": {},
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y,test_size=0.3, random_state=42) \n",
@@ -2267,7 +2267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "644b7633",
+   "id": "30970bd2",
    "metadata": {},
    "source": [
     " X_train, X_test, y_train, y_test = train_test_split(X, y,test_size=0.2, random_state=42) \n",
@@ -2275,9 +2275,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e619749a",
+   "metadata": {},
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,test_size=0.2, random_state=42)\n",
+    "model_17 = RandomForestClassifier(n_estimators=400, max_features=30, max_depth=5,min_samples_leaf=2)  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33c56689",
+   "id": "8c7a673d",
    "metadata": {},
    "outputs": [],
    "source": []
